; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/extr_base.c_rtl_set_tx_report.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/extr_base.c_rtl_set_tx_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtl_tcb_desc = type { i64 }
%struct.ieee80211_hw = type { i32 }
%struct.rtlwifi_tx_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtl_set_tx_report(%struct.rtl_tcb_desc* %0, i32* %1, %struct.ieee80211_hw* %2, %struct.rtlwifi_tx_info* %3) #0 {
  %5 = alloca %struct.rtl_tcb_desc*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ieee80211_hw*, align 8
  %8 = alloca %struct.rtlwifi_tx_info*, align 8
  %9 = alloca i32, align 4
  store %struct.rtl_tcb_desc* %0, %struct.rtl_tcb_desc** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.ieee80211_hw* %2, %struct.ieee80211_hw** %7, align 8
  store %struct.rtlwifi_tx_info* %3, %struct.rtlwifi_tx_info** %8, align 8
  %10 = load %struct.rtl_tcb_desc*, %struct.rtl_tcb_desc** %5, align 8
  %11 = getelementptr inbounds %struct.rtl_tcb_desc, %struct.rtl_tcb_desc* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %4
  %15 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %7, align 8
  %16 = load %struct.rtlwifi_tx_info*, %struct.rtlwifi_tx_info** %8, align 8
  %17 = call i32 @rtl_get_tx_report_sn(%struct.ieee80211_hw* %15, %struct.rtlwifi_tx_info* %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @SET_TX_DESC_SPE_RPT(i32* %18, i32 1)
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @SET_TX_DESC_SW_DEFINE(i32* %20, i32 %21)
  br label %23

23:                                               ; preds = %14, %4
  ret void
}

declare dso_local i32 @rtl_get_tx_report_sn(%struct.ieee80211_hw*, %struct.rtlwifi_tx_info*) #1

declare dso_local i32 @SET_TX_DESC_SPE_RPT(i32*, i32) #1

declare dso_local i32 @SET_TX_DESC_SW_DEFINE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
